--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body style='margin : 0px; overflow: hidden;'>
 
   	<a-scene embedded arjs='trackingMethod: best;'>
-  		<a-anchor hit-testing-enabled='true'>
+  		<a-anchor hit-testing-enabled='true' registerevents>
   			<a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:white;'>
   				<a-torus-knot radius='0.26' radius-tubular='0.05'
   				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true" material='opacity: 0.5; side:double; color:red;'>
