--- a/index.html
+++ b/index.html
@@ -9,16 +9,47 @@
   </head>
   <body style='margin : 0px; overflow: hidden;'>
 
-  	<a-scene embedded arjs='trackingMethod: best;'>
+
+    <a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+  		<!-- handle hiro marker -->
+  		<!-- 'registerevents' will register event listeners for the marker when it is found and lost,
+  		as defined in the inline script above -->
+  		<a-marker preset='hiro' id='marker-hiro' registerevents>
+  			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:blue;'>
+  				<a-torus-knot radius='0.26' radius-tubular='0.05'
+  				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
+  				</a-torus-knot>
+  			</a-box>
+  		</a-marker>
+
+  		<!-- handle matrix marker -->
+  		<!-- 'emitevents' will make the marker emit events when it is found and lost
+  		but, since there are no registered listeners for these events, you will not see any effect.
+  		You can register event listeners in your own custom component, defined similarly to
+  		the 'registerevents' in the inline script above -->
+  		<a-marker type='barcode' value='5' id='marker-barcode-5'>
+  			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
+  				<a-torus-knot radius='0.26' radius-tubular='0.05'
+  				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
+  				</a-torus-knot>
+  			</a-box>
+  		</a-marker>
+
+  		<!-- add a simple camera -->
+  		<a-entity camera></a-entity>
+  	</a-scene>
+
+
+  	<!-- <a-scene embedded arjs='trackingMethod: best;'>
   		<a-anchor hit-testing-enabled='true' registerevents>
-  			<a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:white;'>
+  			<a-box position='0 0.5 10' material='opacity: 0.5; side:double; color:white;'>
   				<a-torus-knot radius='0.26' radius-tubular='0.05'
   				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true" material='opacity: 0.5; side:double; color:red;'>
   				</a-torus-knot>
   			</a-box>
   		</a-anchor>
   		<a-camera-static/>
-  	</a-scene>
+  	</a-scene> -->
 
     <div class="menu">
       <button type="button" class="o1"> 1 </button>
