--- a/events/marker-events.html
+++ b/events/marker-events.html
@@ -22,6 +22,7 @@
 				var markerId = marker.id;
 				console.log('markerFound', markerId);
 				// TODO: Add your own code here to react to the marker being found.
+        document.querySelector("a-box").material = "opacity: 0.5; side: double;color:green;";
 			});
 
 			marker.addEventListener('markerLost', function() {
@@ -44,19 +45,6 @@
 		as defined in the inline script above -->
 		<a-marker preset='hiro' id='marker-hiro' registerevents>
 			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:blue;'>
-				<a-torus-knot radius='0.26' radius-tubular='0.05'
-				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
-				</a-torus-knot>
-			</a-box>
-		</a-marker>
-
-		<!-- handle matrix marker -->
-		<!-- 'emitevents' will make the marker emit events when it is found and lost
-		but, since there are no registered listeners for these events, you will not see any effect.
-		You can register event listeners in your own custom component, defined similarly to
-		the 'registerevents' in the inline script above -->
-		<a-marker type='barcode' value='5' id='marker-barcode-5'>
-			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
 				<a-torus-knot radius='0.26' radius-tubular='0.05'
 				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
 				</a-torus-knot>
