--- a/events/marker-events.html
+++ b/events/marker-events.html
@@ -14,7 +14,7 @@
 		<!-- 'registerevents' will register event listeners for the marker when it is found and lost,
 		as defined in the inline script above -->
 		<a-marker preset='hiro' id='marker-hiro' registerevents>
-			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:blue;'>
+			<a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:green;'>
 				<a-torus-knot radius='0.26' radius-tubular='0.05'
 				animation="property: rotation; to:360 0 0; dur: 5000; easing: linear; loop: true">
 				</a-torus-knot>
@@ -46,7 +46,6 @@
   				var markerId = marker.id;
   				console.log('markerFound', markerId);
   				// TODO: Add your own code here to react to the marker being found.
-          document.querySelector("a-box").material = "opacity: 0.5; side: double;color:green;";
   			});
 
   			marker.addEventListener('markerLost', function() {
@@ -56,6 +55,7 @@
   			});
   		}
   	});
+    document.querySelector("a-box").material = "opacity: 0.5; side: double;color:red;";
   </script>
 </body>
 </html>
