--- a/events/marker-events.html
+++ b/events/marker-events.html
@@ -55,6 +55,7 @@
   			});
   		}
   	});
+    alert(marker);
     document.querySelector("a-box").material = "opacity: 0.5; side: double;color:red;";
   </script>
 </body>
