--- a/events/marker-events.html
+++ b/events/marker-events.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>Events</title>
-  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+  <script src="../aframe-ar.min.js" type="text/javascript"></script>
+  <script src="../aframe.min.js" type="text/javascript"></script>
 </head>
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'><div style='position: fixed; top: 10px; left: 5px; text-align: center; z-index: 1;'>
 	<a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - marker events example for a-frame - look at the js console
