--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>1_Test_AR</title>
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="aframe-ar.min.js" type="text/javascript"></script>
+    <script src="aframe.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="1proto.css"></style>
   </head>
   <body style='margin : 0px; overflow: hidden;'>
