--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>1_Test_AR</title>
+    <!-- <script src="aframe-ar.min.js" type="text/javascript"></script> -->
     <script src="aframe-ar.min.js" type="text/javascript"></script>
     <script src="aframe.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="1proto.css"></style>
